k8s/istio/nifi-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-nifi
  namespace: demo
spec:
  gateways:
  - istio-system/gateway-dmz
  hosts:
  - nifi.demo.vn
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nifi-service
        port:
          number: 8080
